refactor : 변수 인라인화 리턴 지양